<resources>
    <string name="app_name">BeeHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang Chủ</string>
    <string name="menu_phong">Phòng</string>
    <string name="menu_thongKe">Thống kê</string>
    <string name="mnu_rePass">Đổi mật khẩu</string>
    <string name="mnu_out">Đăng xuất</string>
    <string name="menu_gT">Giới Thiệu</string>


    <string name="nhap_user">Nhập tên người dùng</string>
    <string name="nhap_pass">Nhập mật khẩu</string>
    <string name="luumatkhau">Lưu mật khẩu</string>
    <string name="quenmatkhau"><u>Quên mật khẩu ?</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="daco_fragment">Đã có phòng</string>
    <string name="chuaco_fragment">Chưa có phòng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string-array name="listChiSoDichVu">
        <item>Người</item>
        <item>Phòng</item>
        <item>Số lần sử dụng</item>
        <item>Kw</item>
        <item>Khối nước</item>
    </string-array>
    <string name="chat">Bắt đầu Chat</string>
</resources>