<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="net.fpl.beehome.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_phòng"
        android:name="net.fpl.beehome.ui.phong.PhongFragment"
        android:label="@string/menu_phong"
        tools:layout="@layout/fragment_phong" />

    <fragment
        android:id="@+id/nav_thuChi"
        android:name="net.fpl.beehome.ui.thongKe.thongKeFragment"
        android:label="@string/menu_thongKe"
        tools:layout="@layout/fragment_thong_ke" />

    <fragment
        android:id="@+id/nav_doiMatKhau"
        android:name="net.fpl.beehome.ui.doiMatKhau.DoiMatKhauFragment"
        android:label="@string/mnu_rePass"
        tools:layout="@layout/fragment_doi_mat_khau" />

    <fragment
        android:id="@+id/nav_gT"
        android:name="net.fpl.beehome.ui.gioiThieu.GioiThieuFragment"
        android:label="@string/menu_gT"
        tools:layout="@layout/fragment_gioi_thieu" />
</navigation>