<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_phòng"
            android:icon="@drawable/ic_baseline_home_work_24"
            android:title="@string/menu_phong" />
        <item
            android:id="@+id/nav_thuChi"
            android:icon="@drawable/ic_thong_ke_24dp"
            android:title="@string/menu_thuChi" />
        <item
            android:id="@+id/nav_gT"
            android:icon="@drawable/ic_gioithieu"
            android:title="@string/menu_gT" />
    </group>
</menu>